--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AAA Multiplayer for Web Apps (and Games)</title>
+    <style>
+      html,
+      body,
+      main {
+        width: 100%;
+        height: 100%;
+      }
+
+      body {
+        font-family: monospace;
+        margin: 0;
+      }
+
+      main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background: rgb(10, 122, 243);
+      }
+
+      h1 {
+        background: white;
+        border: 1px solid black;
+        padding: 0.5rem;
+
+        box-shadow:
+          0.25rem 0.25rem 0 rgb(255, 92, 2),
+          0.25rem 0.25rem 0 0.5px black;
+        pointer-events: none;
+      }
+    </style>
   </head>
   <body>
     <main></main>
-    <script type="module" src="./index.ts"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
