--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
       html {
         overscroll-behavior: none;
         touch-action: none;
-        /* cursor: none; */
+        cursor: none;
       }
 
       body {
@@ -29,6 +29,10 @@
         align-items: center;
 
         background: rgb(10, 122, 243);
+      }
+
+      h1,
+      svg {
         pointer-events: none;
       }
 
